cmake_minimum_required(VERSION 3.22)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(leetcode main.cpp LongestPalindromicSubstring.h utils/ListNode.cpp utils/ListNode.h MergeKSortedLists.h ReverseNodesInKGroups.h SubstringWithConcatenationOfAllWords.h LongestValidParentheses.h FirstMissingPositive.h Powxn.h NQueens.h NQueens2.h PermutationSequence.h ScrambleString.h MaximumWidthOfBinaryTree.h utils/TreeNode.h ProfitableSchemes.h)
